--- a/menu/menu.html
+++ b/menu/menu.html
@@ -122,7 +122,7 @@
 
         <h4>2016.11.30</h4>
         <ul>
-          <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/Program_4/mb" target="_blank">Program 4</a></li>
+          <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/Program_4/mb/program_4.html" target="_blank">Program 4 - Widgets</a></li>
         </ul>
 
         <h4>2016.11.02</h4>
