Add Angular.js stuff, Angular temperature converter, added chart.js to program 4

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -51,6 +51,12 @@
         <!---------------------------------------->
         <h2>In Class</h2>
 
+        <h4>2016.12.05</h4>
+        <ul>
+          <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/angulartut/tempconv.html" target="_blank">Angular Temperature Converter</a></li>
+          <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/angulartut/angular.html" target="_blank">Angular Tut</a></li>
+        </ul>
+
         <h4>2016.11.28</h4>
         <ul>
           <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/yahooweather/yahooweather.html" target="_blank">Yahoo Weather</a></li>
