--- a/Program_4/mb/program_4.html
+++ b/Program_4/mb/program_4.html
@@ -172,7 +172,7 @@
         </h1>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <!--FCDUVEND START-->
@@ -187,18 +187,18 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4><i class="fa fa-fw fa-gift"></i> Chart.js</h4>
           </div>
           <div class="panel-body">
-            <canvas id="myChart" style="width: 100%; height: 400px"></canvas>
+            <canvas id="myChart" style="width: 100%; height: 100%"></canvas>
             <a href="#" class="btn btn-default">Learn More</a>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4><i class="fa fa-fw fa-compass"></i> Yahoo Weather</h4>
@@ -334,13 +334,6 @@
   <script type="text/javascript" src="../../../jqwidgets/jqwidgets/jqxchart.core.js"></script>
   <script type="text/javascript" src="../../../jqwidgets/jqwidgets/jqxdata.js"></script>
 
-  <script src="scripts/require.js"></script>
-
-  <script src="../../../Chart.js/src/chart.js"></script>
-
-    var myChart = new Chart({...});
-  </script>
-
 
   <script src="scripts/weather.js"></script>
 
@@ -419,9 +412,9 @@
               toolTipFormatFunction: toolTipCustomFormatFn,
               series: [
                   { dataField: 'avg', displayText: 'Average Temperature', opacity: 1, lineWidth: 2 }
-                ]
+              ]
+                
             }
-
           ]
       };
 
@@ -429,45 +422,35 @@
       $('#chartContainer').jqxChart(settings);
     });
     //JQWIDGETS END
+  </script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
+
+  <script>
     //CHART JS START
-
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-          type: 'bar',
-          data: {
-              labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-              datasets: [{
-                  label: '# of Votes',
-                  data: [12, 19, 3, 5, 2, 3],
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
-                  borderWidth: 1
-              }]
-          },
-          options: {
-              scales: {
-                  yAxes: [{
-                      ticks: {
-                          beginAtZero:true
-                      }
-                  }]
-              }
-          }
+    var ctx = document.getElementById("myChart");
+    var myChart = new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: ["Clinton", "Trump", "Stein", "Johnson"],
+            datasets: [{
+                label: '# of Votes',
+                data: [10, 8.3, 1.2, 4],
+                backgroundColor: [
+                    'rgba(0, 0, 255, 0.2)',
+                    'rgba(255, 0, 0, 0.2)',
+                    'rgba(0, 255, 0, 0.2)',
+                    'rgba(255, 255, 0, 0.2)',
+                ],
+                borderColor: [
+                    'rgba(0, 0, 255, 1)',
+                    'rgba(255, 0, 0,1)',
+                    'rgba(0, 255, 0, 1)',
+                    'rgba(255, 255, 0, 1)',
+                ],
+                borderWidth: 1
+            }]
+        }
       });
     //CHART JS END
   </script>
