added angularCourses: course lookup using angular and jquery

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -51,6 +51,13 @@
         <!---------------------------------------->
         <h2>In Class</h2>
 
+        <h4>2016.12.07</h4>
+        <ul>
+          <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/angularCourses/angularCourses.html" target="_blank">Angular Course
+              Lookup</a></li>
+        </ul>
+
+
         <h4>2016.12.05</h4>
         <ul>
           <li><a href="http://csis.svsu.edu/~fcduvend/cis255_fcduvend/angulartut/tempconv.html" target="_blank">Angular Temperature Converter</a></li>
